<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->

<resources>
    <string name="app">Small HTTP VPN</string>
    <string name="address">Server_Address/vpn_key (example.com/$_vpn_$):</string>
    <string name="port">Server Port:</string>
    <string name="uname">User name:</string>
    <string name="secret">Password:</string>
    <string name="connect">Connect!</string>
    <string name="disconnect">Disconnect!</string>
    <string name="proxyhost">HTTP proxy hostname</string>
    <string name="proxyport">HTTP proxy port</string>

    <string name="packages">Packages (comma separated):</string>
    <string name="allowed">Allow</string>
    <string name="disallowed">Disallow</string>

    <string name="connecting">VPN is connecting...</string>
    <string name="connected">VPN is connected!</string>
    <string name="disconnected">VPN is disconnected!</string>
    <string name="incomplete_proxy_settings">
        Incomplete proxy settings. For HTTP proxy we require both hostname and port settings.
    </string>
    <string name="unknown_package_names">
        Some of the specified package names do not correspond to any installed packages.
    </string>
    <string name="badserverkey">Bad parametr server/key</string>
    <string name="bad_pass">\"Bad user/password\"</string>
    <string name="bad_url">Bad server name/key</string>
    <string name="urlnotvpn">This server/key isn\'t VPN server</string>
    <string name="handshake_failed">TLS handshake failed</string>
    <string name="new_ser">Unkow sertificate on remote server</string>
    <string name="trast_to_this_certificate">Trast to this certificate</string>
    <string name="remove_stored_servers">Forget all stored servers</string>
    <string name="remove_all_known_sertificates">Forget all known certificates</string>
    <string name="remove_current_server">Forget current server</string>
    <string name="limover">\"Limit overflow\"</string>
    <string name="show_password">Show password</string>
    <string name="access_to_local_network_only_do_not_change_routing">Access to local network only</string>
    <string name="unknown_sert">Unknown sertificate:</string>
    <string name="cantconnect">Can\'t connect</string>
</resources>
