<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3mm"
            android:spinnerMode="dialog"
        >

        <Spinner
            android:id="@+id/lb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:hint="History"
            android:minHeight="48dp"
            />
        <TextView style="@style/item" android:text="@string/address"/>
        <EditText style="@style/item" android:id="@+id/address" android:hint="example.com/$_vpn_$" android:layout_width="match_parent" android:minHeight="48dp" />


        <!-- TextView style="@style/item" android:text="@string/port"/>
        <EditText style="@style/item" android:id="@+id/port" android:inputType="number"/ -->

        <TextView style="@style/item" android:text="@string/uname"  android:hint="user" />
        <EditText style="@style/item" android:id="@+id/uname" android:hint="proxy_user" android:layout_width="match_parent" android:minHeight="48dp"/>

        <TextView style="@style/item" android:text="@string/secret"/>

        <EditText style="@style/item" android:id="@+id/secret" android:password="true"
            android:inputType="textPassword" android:layout_width="match_parent" android:minHeight="48dp"  android:hint="qwerty" />
        <CheckBox  style="@style/item" android:id="@+id/show_pass" android:text="@string/show_password" android:minHeight="48dp" />
        <CheckBox  style="@style/item" android:id="@+id/lan" android:text="@string/access_to_local_network_only_do_not_change_routing" android:minHeight="48dp" />

        <!-- TextView style="@style/item" android:text="@string/proxyhost"/>
        <EditText style="@style/item" android:id="@+id/proxyhost"/>

        <TextView style="@style/item" android:text="@string/proxyport"/>
        <EditText style="@style/item" android:id="@+id/proxyport" android:inputType="number"/ -->

        <!-- TextView style="@style/item" android:text="@string/packages"/>
        <RadioGroup
            style="@style/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/allowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allowed"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disallowed"/>
        </RadioGroup>
        <EditText style="@style/item" android:id="@+id/packages"/ -->

        <Button style="@style/item" android:id="@+id/connect" android:text="@string/connect"  android:textStyle="bold" />
        <Button style="@style/item" android:id="@+id/disconnect" android:text="@string/disconnect" android:textStyle="bold" />
        <TextView style="@style/item" android:id="@+id/app_status" android:text="" android:minHeight="48dp" />
        <TextView style="@style/item" android:id="@+id/cert" android:text="" android:minHeight="96dp" android:visibility="invisible"
            android:layout_width="wrap_content"
            android:ellipsize="none"
            android:maxLines="6"
            android:lines="5"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:layout_weight="1"/>
        <Button style="@style/item" android:id="@+id/trast" android:text="@string/trast_to_this_certificate" android:visibility="invisible" android:textStyle="bold" />
        <!-- TextView
            android:id="@+id/textViewLog"
            android:layout_width="match_parent"
            android:layout_height="200dp "
            android:text="@string/log"
            android:maxLines="2000"
            android:scrollbars = "vertical"
            android:gravity="bottom"
            android:visibility="invisible"
            / -->

    </LinearLayout>
</ScrollView>
